[metadata]
name = zfmapper
version = 0.1.0
description = A Simple and Complete Fluorescent Quantification Freeware for Zebrafish Images
license = Apache License, Version 2.0

[options]
install_requires =
    tifffile
    pandas

[options.entry_points]
console_scripts =
    zfmapper = zfmapper.zfmapper:main
